[package]
name = "coyote-build"
version = "0.1.0"
edition = "2021"
autors = [ "Pougher <axolotifiedyt@gmail.com>" ]
license = "MIT OR Apache-2.0"
description = "Explicit project building tool"
readme = "README.md"
homepage = "https://github.com/Pougher/coyote"
repository = "https://github.com/Pougher/coyote"
keywords = [ "cli" ]
categories = [ "command-line-utilities",  "development-tools" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
indicatif = "0.17.8"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
shlex = "1.3.0"
